--- a/YandexDiskAPI/YandexDiskUI/templates/YandexDiskUI/index.html
+++ b/YandexDiskAPI/YandexDiskUI/templates/YandexDiskUI/index.html
@@ -1,48 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
 </head>
 <body>
+    <div>
+        <input type="checkbox" id="use_cache" name="use_cache" checked>
+        <label for="use_cache">Использовать кэш</label>
+    </div>
     <form action="" method="GET" onsubmit="updateAction(event)">
-    <label for="public_key">Введите публичную ссылку или публичный ключ:</label>
-    <input type="text" name="public_key" id="public_key" maxlength="1000" required>
-    <br>
-    <label for="path">Введите путь для файла:</label>
-    <input type="text" name="path" id="path" maxlength="1000">
-    <br>
-    <button type="submit">Получить файлы</button>
-</form>
-
-<script>
-
-function updateAction(event) {
-    event.preventDefault(); // Предотвращаем отправку формы
-
-    const publicKey = document.getElementById('public_key').value.trim();
-    let path = document.getElementById('path').value.trim();
-
-    // Если path не указан, устанавливаем значение по умолчанию
-    if (!path) {
-        path = '/'; // Или любой другой дефолтный путь
-    }
-
-    // Кодируем в base64
-    const encodedPublicKey = btoa(encodeURIComponent(publicKey));
-    const encodedPath = btoa(encodeURIComponent(path));
-
-    // Формируем новый URL с параметрами в пути
-    const actionUrlTemplate = "{% url 'index_file' 'public_key_placeholder' 'path_placeholder' %}";
-    const actionUrl = actionUrlTemplate.replace('public_key_placeholder', encodeURIComponent(encodedPublicKey)).replace('path_placeholder', encodeURIComponent(encodedPath));
-    // Перенаправляем на сформированный URL
-    window.location.href = actionUrl;
-}
-</script>
-
-
-
-
-
+        <label for="public_key">Публичная ссылка или ключ:</label>
+        <input type="text" name="public_key" id="public_key" maxlength="1000" required>
+        <label for="path">Путь для файла(для ключа):</label>
+        <input type="text" name="path" id="path" maxlength="1000">
+        <button type="submit">Получить файлы</button>
+    </form>
+    <script>
+        const staticUrl = "{% url 'index_file' 'public_key_placeholder' 'path_placeholder' %}";
+    </script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 </html>
